<!--
  ~ Copyright 2016 Tino Siegmund, Michael Wodniok
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">InstalistSynch</string>
    <string name="abc_sycnhronization">Synchronization</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="abc_login">Login</string>
    <string name="abc_username_exists">Username already exists.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="no_internet_conn">Error! No internet connection. Please establish a connection.</string>
    <string name="error_register">There was an error while register the group  with the message:</string>
    <string name="error_join">An error occured while joining group with message:</string>
    <string name="network_response_error">Network response can not be read.</string>
    <string name="server_sent_not_unique_id_retry">Server has sent none unique id. Please try again!</string>
    <string name="error_response_not_parseable">The response can not be parsed.</string>
    <string name="abc_local_group_exists">You can only have one local group.</string>
    <string name="error_temporary_group_access">Temporary group access token cannot be fetched. Please retry!</string>
    <string name="abc_temporary_access_token">Temporary access token:</string>
    <string name="internal_db_error">There was an internal database error.</string>
    <string name="error_devices_group">Cannot get devices of group.</string>
    <string name="authorize">Authorize</string>
    <string name="abc_request_group_access_token">Access Token</string>
    <string name="hint_tmp_group_id">Access Key to Group</string>
    <string name="abc_join_group">Join Group</string>
    <string name="abc_create_group">Create Group</string>
    <string name="hint_device_name">Name of device in group</string>
    <string name="error_auth_token">AuthToken error</string>
    <string name="error_update_device_in_group">Update of device in group failed!</string>
    <string name="abc_remove">Remove</string>
    <string name="internal_server_error">Internal server error!</string>
    <string name="abc_error_member_not_existing">The group member does not exist anymore!</string>
    <string name="abc_refresh">Refresh</string>
    <string name="abc_error_resolving_conflict">There was an error while resolving the conflict.</string>
    <string name="abc_test_list_synch">Test List Synch</string>
    <string name="abc_groupId">Id of the group</string>
    <string name="abc_no_internet_connection">Not connected to internet.</string>
</resources>
